--- a/spring-boot/springboot-sti/Dockerfile
+++ b/spring-boot/springboot-sti/Dockerfile
@@ -18,7 +18,7 @@ RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     mkdir -p /opt/openshift && \
     mkdir -p /opt/app-root/source && chmod -R a+rwX /opt/app-root/source && \
     mkdir -p /opt/s2i/destination && chmod -R a+rwX /opt/s2i/destination && \
-    mkdir -p /opt/app-root/src && chmod -R a+rwX /opt/app-root/src
+    mkdir -p /opt/app-root/src && chmod -R a+rwX /opt/app-root/src && \
     mkdir -p $HOME/.m2 && chmod -R a+rwX $HOME/.m2
 
 ENV PATH=/opt/maven/bin/:$PATH
