--- a/spring-boot/springboot-sti/Dockerfile
+++ b/spring-boot/springboot-sti/Dockerfile
@@ -14,21 +14,21 @@ RUN INSTALL_PKGS="tar bc which lsof java-1.8.0-openjdk java-1.8.0-openjdk-devel"
     mkdir -p /opt/s2i/destination && chmod -R a+rwX /opt/s2i/destination && \
     mkdir -p /opt/app-root/src && chmod -R a+rwX /opt/app-root/src
 
-ENV MAVEN_VERSION 3.3.9
-RUN (curl -0 http://www.eu.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz | \
-    tar -zx -C /usr/local) && \
-    mv /usr/local/apache-maven-$MAVEN_VERSION /usr/local/maven && \
-    ln -sf /usr/local/maven/bin/mvn /usr/local/bin/mvn && \
-    mkdir -p $HOME/.m2 && chmod -R a+rwX $HOME/.m2
+#ENV MAVEN_VERSION 3.3.9
+#RUN (curl -0 http://www.eu.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz | \
+#    tar -zx -C /usr/local) && \
+#    mv /usr/local/apache-maven-$MAVEN_VERSION /usr/local/maven && \
+#    ln -sf /usr/local/maven/bin/mvn /usr/local/bin/mvn && \
+#    mkdir -p $HOME/.m2 && chmod -R a+rwX $HOME/.m2
 
-ENV PATH=/opt/maven/bin/:$PATH
+#ENV PATH=/opt/maven/bin/:$PATH
 
 ENV BUILDER_VERSION 1.0
 
-LABEL io.k8s.description="Platform for building Spring Boot applications with maven or gradle" \
+LABEL io.k8s.description="Platform for building Spring Boot applications" \
       io.k8s.display-name="Spring Boot builder 1.0" \
       io.openshift.expose-services="8080:http" \
-      io.openshift.tags="builder,maven-3,gradle-2.6,springboot"
+      io.openshift.tags="builder,springboot"
 
 # TODO (optional): Copy the builder files into /opt/openshift
 # COPY ./<builder_folder>/ /opt/openshift/
